--- a/property/src/app/aboutus/aboutus.component.html
+++ b/property/src/app/aboutus/aboutus.component.html
@@ -1,13 +1,11 @@
 
     <section class="about">
         <div class="main">
-            <img src="../../assets/1.-property-management-services-1 (1).gif">
+            <img src="../../assets/1.-property-management-services-1 (1).gif" alt="gif">
             <div class="about-text">
                 <h4>ABOUT <span>US</span></h4>
                 <h5>SERVICE WITH A <span>LIFESTYLE</span></h5>
                 <p>Property management systems are used to manage, control and account for personal property. Property is defined as the equipment, tooling and physical capital assets that are acquired and used to build, repair and maintain end item deliverables. Property Management involves the processes, systems and manpower required to manage the life cycle of all acquired property as defined above including Acquisition, Control, Accountability, Maintenance, Utilization, and disposition.</p>
-                    <!-- Property Management systems allow local property managers and maintenance personnel to manage the day-to-day operations of their properties. Property maintenance for commercial properties includes major focus areas such as risk management, maintenance, communication, and tenant satisfaction. Usually a certain agreed percentage of the rent payment will be deducted on each rent payment collected by the property management as their service fee. There are also other ways of charging the property owners using the service but percentage collection is the common one.</p> -->
-                <!-- <button type="button" >Let's connect</button> -->
                 <a href="contact2"  class="contact2">Let's Connect</a>
             </div>
         </div>
