--- a/property/src/app/admin/admin.component.html
+++ b/property/src/app/admin/admin.component.html
@@ -19,7 +19,7 @@
                   *password is required</span>
           </div>
       </div>
-     <div><input type="submit" value=" Click! Login" class="btn"></div>
+     <div><input type="submit" value=" LOGIN" class="btn"></div>
   </form>
 
 </section>
