--- a/property/src/app/dashboard/dashboard.component.html
+++ b/property/src/app/dashboard/dashboard.component.html
@@ -1,56 +1,49 @@
-  <div class="sidebar">
-    <div class="logo-details">
-      <!-- <i class='bx bxl-c-plus-plus'></i> -->
-      <span class="logo_name">GET<span>PROP</span></span>
-    </div>
-      <ul class="nav-links">
-        <!-- <li>
-          <a href="#">
-            <i class='bx bx-grid-alt' ></i>
-            <span class="links_name">Dashboard</span>
-          </a>
-        </li> -->
-        <li>
-          <a href="#" class="active">
-            <i class='bx bx-pie-chart-alt-2' ></i>
-            <span class="links_name">REGISTERED USERS</span>
-          </a>
-        </li>
-        <li>
-          <a href="posted">
-            <i class='bx bx-box' ></i>
-            <span class="links_name">POSTED PROP</span>
-          </a>
-        </li>
-        <!-- <li>
-          <a href="#">
-            <i class='bx bx-list-ul' ></i>
-            <span class="links_name">Maintanance Request</span>
-          </a>
-        </li> -->
-        <li>
-          <a href="queries" >
-            <i class='bx bx-pie-chart-alt-2' ></i>
-            <span class="links_name">QUERIES</span>
-          </a>
-        </li>
-       
-        <li class="log_out">
-          <a href="#">
-            <i class='bx bx-log-out'></i>
-            <span class="links_name">LOG</span>
-          </a>
-        </li>
-      </ul>
-  </div>
-  <section class="home-section">
-    <!-- <nav>
-      <div class="sidebar-button">
-        <i class='bx bx-menu sidebarBtn'></i>
-        <span class="dashboard">ADMIN DASHBOARD</span>
-      </div>
-     
-    </nav> -->
+<div class="heading">
+  <h1 class="head"></h1>
+ </div>
+ <div class="dashboard">
+  <div class="side-menu">
+   <div class="brand-name">
 
-   
-            <!-- <p>dashpostprop works!</p> -->
+    <h1>DASHBOARD </h1>
+   </div>
+
+   <ul>
+    <li>
+     
+    </li>
+    <li class="post">
+      <a href="dashpost">POSTED PROP</a>
+    </li>
+    <li class="queries">
+    <a href="queries">QUERIES</a>
+    </li>
+    <li>
+     
+    </li>
+    <li>
+     
+    </li>
+    <li class="logout">
+     
+    </li>
+   </ul>
+  </div>
+
+    <div class="container">
+        <div class="card hero">
+          <div class="row row__one">
+            <div class="col col__one hero__img">
+            </div>
+          </div>
+          <div class="row row__two">
+            <div class="col col__two">
+              <h1 class="hero__title">GET <span class="hero__title--highlight">PROP</span> <br>A satisfied customer is our business .
+              </h1>
+              <p class="hero__text">
+                With the ever-evolving online search behaviour, GET PROP shares updated information pertinent to real estate activities, assisting prospective buyers to make informed buying decision. We make online property search easier, quicker and smarter!
+              </p>
+            </div>
+          </div>
+        </div>
+    </div>
