--- a/property/src/app/lists/lists.component.html
+++ b/property/src/app/lists/lists.component.html
@@ -12,95 +12,68 @@ href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3
   
 
     <div class="main-container">
-      <h2>WORLD'S FAVOURITE PROPERTY SITE</h2>
-      <!-- <h4>CHOOSE YOUR SERVICE</h4> -->
+      <h2>BUY OR SELL YOUR PROP AT <span>ONE CLICK</span></h2>
       <div class="radio-buttons">
         <label class="custom-radio">
           <input type="radio" routerLink="/buytypeofprop" name="radio" checked />
           <span class="radio-btn"
-            ><i class="las la-check"></i>
+            ><em class="las la-check"></em>
             <div class="hobbies-icon">
-              <i class="las la-home"></i>
-              <h4>GET PROP</h4>
+              <em class="las la-home"></em>
             </div>
           </span>
         </label>
         
        
       </div>
+
+      
     </div>
 
-    <body>
-      <div class="main">
-        <input type="text" name="Search" placeholder="Enter the location">
-        <button>SEARCH</button>
-      </div>
-     </body>
-
-    <!-- <select class="select" data-mdb-filter="true">
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
-      <option value="4">Four</option>
-      <option value="5">Five</option>
-      <option value="6">Six</option>
-      <option value="7">Seven</option>
-      <option value="8">Eight</option>
-      <option value="9">Nine</option>
-      <option value="10">Ten</option>
-    </select> -->
+  
+   
 
 
-<div class="container">
-  <div class="card hero">
-    <div class="row row__one">
-      <div class="col col__one hero__img">
-      </div>
+
+  <div class="container1">
+   
+    <div class="thumbanail left">
+       <img src="../../assets/cover.jpg" alt="" />
     </div>
-    <div class="row row__two">
-      <div class="col col__two">
-        <h1 class="hero__title">GET <span class="hero__title--highlight">PROP</span> <br>Have other property to post for free?.
-        </h1>
-        <p class="hero__text">
-          With the ever-evolving online search behaviour, GET PROP shares updated information pertinent to real estate activities, assisting prospective buyers to make informed buying decision. We make online property search easier, quicker and smarter!
-        </p>
-      </div>
-    
-      <div class="col col__three hero__stats">
-        <div class="stat__group">
-          <h2 class="hero__stat">10L+</h2>
-          <p class="hero__stats__heading">Property Listings</p>
-        </div>
-        <div class="stat__group">
-          <h2 class="hero__stat">45L+</h2>
-          <p class="hero__stats__heading">Monthly Searches</p>
-        </div>
-        <div class="stat__group">
-          <h2 class="hero__stat">2L+</h2>
-          <p class="hero__stats__heading">Owners Advertise Monthly</p>
-        </div>
-      </div>
-    </div>
-  </div>
+    <h4>The Efficient Way To Run Your Property</h4><br><br>
+    <p>
+      A fully-integrated cloud property management system that makes life easier.</p>
+     <p> Our property management system offers the unique ability to provide real-time online booking functionality, which enables the collection of bookings from a property’s website, the global distribution system and an expansive variety of third-party travel websites.
+
+      Trusted by more than 6,000 properties across 45 countries, our unrivalled software offers everything you need to successfully run your business.
+      
+      We continually enhance our product to keep you at the forefront of innovation. Here's what we achieved in 2020.
+      
+           </p>
+ </div>
 
 
+<div class="video">
+  <p>" A fully-integrated property management system that makes <br><span>life easier</span>"</p>
 
+  <iframe src="../../assets/Property Ad Video Template (Editable).mp4" width="900" height="500" autoplay></iframe>
+</div>
 
   
   <div class="wrapper">
     <div class="box">
-      <i class="fas fa-quote-left quote"></i>
+      <em class="fas fa-quote-left quote"></em>
       <p>Lorem aliasry ipsum dolor sits ametans, consectetur adipisicing elitits. Expedita reiciendis itaque placeat thuratu, quasi yiuos repellendus repudiandae deleniti ideas fuga molestiae, alias.</p>
       <div class="content">
         <div class="info">
-          <div class="name">Alex Smith</div>
+          <div class="name">USHA</div>
           <div class="job">Designer | Developer</div>
           <div class="stars">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="far fa-star"></i>
-            <i class="far fa-star"></i>
-            <i class="far fa-star"></i>
+            <em class="fas fa-star"></em>
+            <em class="fas fa-star"></em>
+            <em class="far fa-star"></em>
+            <em class="far fa-star"></em>
+            <em class="far fa-star"></em>
           </div>
         </div>
         <div class="image">
@@ -109,18 +82,18 @@ href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3
       </div>
     </div>
     <div class="box">
-      <i class="fas fa-quote-left quote"></i>
+      <em class="fas fa-quote-left quote"></em>
       <p>Lorem aliasry ipsum dolor sits ametans, consectetur adipisicing elitits. Expedita reiciendis itaque placeat thuratu, quasi yiuos repellendus repudiandae deleniti ideas fuga molestiae, alias.</p>
       <div class="content">
         <div class="info">
-          <div class="name">Steven Chris</div>
+          <div class="name">MANI</div>
           <div class="job">YouTuber | Blogger</div>
           <div class="stars">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="far fa-star"></i>
-            <i class="far fa-star"></i>
+            <em class="fas fa-star"></em>
+            <em class="fas fa-star"></em>
+            <em class="fas fa-star"></em>
+            <em class="far fa-star"></em>
+            <em class="far fa-star"></em>
           </div>
         </div>
         <div class="image">
@@ -129,18 +102,18 @@ href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3
       </div>
     </div>
     <div class="box">
-      <i class="fas fa-quote-left  quote"></i>
+      <em class="fas fa-quote-left  quote"></em>
       <p>Lorem aliasry ipsum dolor sits ametans, consectetur adipisicing elitits. Expedita reiciendis itaque placeat thuratu, quasi yiuos repellendus repudiandae deleniti ideas fuga molestiae, alias.</p>
       <div class="content">
         <div class="info">
-          <div class="name">Kristina Bellis</div>
+          <div class="name">ANANDH</div>
           <div class="job">Freelancer | Advertiser</div>
           <div class="stars">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="far fa-star"></i>
+            <em class="fas fa-star"></em>
+            <em class="fas fa-star"></em>
+            <em class="fas fa-star"></em>
+            <em class="fas fa-star"></em>
+            <em class="far fa-star"></em>
           </div>
         </div>
         <div class="image">
