--- a/property/src/app/services/services.component.html
+++ b/property/src/app/services/services.component.html
@@ -1,5 +1,5 @@
 
-
+<h3>BUY YOUR DREAM PROP - SERVICE WITH A LIFESTYLE</h3>
         <div class="grid">
       <ng-container *ngFor="let item of propertyList | filter:searchKey:'address'">
       <div class="grid-item">
