--- a/property/src/app/app.component.html
+++ b/property/src/app/app.component.html
@@ -1,10 +1,12 @@
+<!-- <app-loginform></app-loginform> -->
+<!-- <app-lists></app-lists> -->
+
+
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
-
 <!-- <app-login></app-login> -->
 <!-- <app-signup></app-signup> -->
-<!-- <app-lists></app-lists> -->
 <!-- <app-contact></app-contact> -->
 <!-- <app-postad></app-postad> -->
 <!-- <app-agreement-upload></app-agreement-upload> -->
