--- a/property/src/app/buytypeofprop/buytypeofprop.component.html
+++ b/property/src/app/buytypeofprop/buytypeofprop.component.html
@@ -1,6 +1,6 @@
-<h1>HAVE TO BUY PROPERTY...?</h1><br>
 <h3>CHOOSE THE TYPE OF PROP</h3>
-    
+    <a href="buy">BUY</a>
+    <a href="sell">SELL</a>
      <div class="main">
     
        
@@ -10,17 +10,13 @@
           <img src="../../assets/house1.jpg">
        </div>
        <div class="title">
-        <h1>
-       BUILT PROPERTY</h1>
+       
        </div>
        <div class="des">
         <p>All Types of houses ranging from 1BHK,2BHK,3BHK...</p><br>
-      <!-- <a href="serviceform" class="serviceform">GET HELP</a> -->
-      <a href="rental" class="serviceform">BUY</a>
-      <a href="sell" class="serviceform">SELL</a>
+      <a href="rental" class="serviceform">RENTED HOUSE</a>
        </div>
        </div>
-       <!--cards -->
        
        
        <div class="card">
@@ -29,16 +25,13 @@
           <img src="../../assets/comm4.jpg">
        </div>
        <div class="title">
-        <h1>
-       COMMERCIAL</h1>
+       
        </div>
        <div class="des">
         <p>Need Commercial Spaces For Rent..?</p><br>
-      <a href="commercial" class="serviceform">BUY</a>
-      <a href="sell" class="serviceform">SELL</a>
+      <a href="commercial" class="serviceform">COMMERCIAL</a>
        </div>
        </div>
-       <!--cards -->
        
        
        <div class="card">
@@ -47,12 +40,10 @@
           <img src="../../assets/land1.jpg">
        </div>
        <div class="title">
-        <h1>
-       LAND</h1>
+  
        </div>
        <div class="des">
         <p>Own a Land Today !!</p><br>
-      <a href="land" class="serviceform">BUY</a>
-      <a href="sell" class="serviceform">SELL</a>
+      <a href="land" class="serviceform">LAND</a>
        </div>
        </div>
