--- a/property/src/app/commercial/commercial.component.html
+++ b/property/src/app/commercial/commercial.component.html
@@ -1,17 +1,14 @@
-<!-- <p>commercial works!</p> -->
 <div class="grid">
   <ng-container *ngFor="let item of propertyList">
    <div class="grid-item">
       <div class="card">
-        <img class="card-img" src="{{item.upload}}" alt="Rome" />
+        <img class="card-img" src="{{item.upload}}" alt="comm" />
         <div class="card-content">
             <h6 class="card-header">{{item.address}}</h6>
-            <!-- <h6 class="card-header"></h6> -->
           <p class="card-text">
             {{item.description}}
           
           </p>
-          <!-- <button class="card-btn">GET CONTACT</button> -->
           <a href="comm1" class="comm1">GET CONTACT</a>
         </div>
       </div>
@@ -21,7 +18,7 @@
         <img
           class="card-img"
           src="../../assets/comm2.jpg"
-          alt="Grand Canyon"
+          alt="comm"
         />
         <div class="card-content">
           <h4 class="card-header">VELACHERRY</h4>
@@ -29,7 +26,6 @@
             A Decent 1BHK house with good interior designs and modular kitchen , 2 attached restrooms , beach view balcony and there are both 2 wheeler and 4wheeler parking facilities
 
           </p>
-          <!-- <button class="card-btn">GET CONTACT</button> -->
           <a href="comm2" class="comm2">GET CONTACT</a>
 
         </div>
@@ -37,13 +33,12 @@
     </div>
     <div class="grid-item">
       <div class="card">
-        <img class="card-img" src="../../assets/comm3.jpg" alt="Maldives" />
+        <img class="card-img" src="../../assets/comm3.jpg" alt="comm" />
         <div class="card-content">
           <h4 class="card-header">AMBATTUR</h4>
           <p class="card-text">
             A Decent 1BHK house with good interior designs and modular kitchen , 2 attached restrooms , beach view balcony and there are both 2 wheeler and 4wheeler parking facilities
           </p>
-          <!-- <button class="card-btn">GET CONTACT</button> -->
           <a href="comm3" class="comm3">GET CONTACT</a>
 
         </div>
@@ -51,13 +46,12 @@
     </div>
     <div class="grid-item">
       <div class="card">
-        <img class="card-img" src="../../assets/comm4.jpg" alt="Maldives" />
+        <img class="card-img" src="../../assets/comm4.jpg" alt="comm" />
         <div class="card-content">
           <h4 class="card-header">AVADI</h4>
           <p class="card-text">
             A Decent 1BHK house with good interior designs and modular kitchen , 2 attached restrooms , beach view balcony and there are both 2 wheeler and 4wheeler parking facilities
           </p>
-          <!-- <button class="card-btn">GET CONTACT</button> -->
           <a href="comm4" class="comm4">GET CONTACT</a>
 
         </div>
@@ -65,13 +59,12 @@
     </div>
     <div class="grid-item">
       <div class="card">
-        <img class="card-img" src="../../assets/comm5.jpg" alt="Maldives" />
+        <img class="card-img" src="../../assets/comm5.jpg" alt="comm" />
         <div class="card-content">
           <h4 class="card-header">ARAKONNAM</h4>
           <p class="card-text">
             A Decent 1BHK house with good interior designs and modular kitchen , 2 attached restrooms , beach view balcony and there are both 2 wheeler and 4wheeler parking facilities
           </p>
-          <!-- <button class="card-btn">GET CONTACT</button> -->
           <a href="comm5" class="comm5">GET CONTACT</a>
 
         </div>
@@ -79,13 +72,12 @@
     </div>
     <div class="grid-item">
       <div class="card">
-        <img class="card-img" src="../../assets/comm6.jpg" alt="Maldives" />
+        <img class="card-img" src="../../assets/comm6.jpg" alt="comm" />
         <div class="card-content">
           <h4 class="card-header">KAATPAADI</h4>
           <p class="card-text">
             A Decent 1BHK house with good interior designs and modular kitchen , 2 attached restrooms , beach view balcony and there are both 2 wheeler and 4wheeler parking facilities
           </p>
-          <!-- <button class="card-btn">GET CONTACT</button> -->
           <a href="comm6" class="comm6">GET CONTACT</a>
 
         </div>
