--- a/property/src/app/dashpostprop/dashpostprop.component.html
+++ b/property/src/app/dashpostprop/dashpostprop.component.html
@@ -1,4 +1,3 @@
- <!-- <p>dashpostprop works!</p> -->
  <div>
   <table id="post">
     <thead>
@@ -9,7 +8,7 @@
     <th>LANDMARK</th>
     <th>RENT</th>
     <th>DESCRIPTION</th>
-    <th>ATTACHMENTS</th>
+    <th>IMAGES</th>
   </thead>
   <tbody>
     <tr *ngFor="let user of alluserData">
@@ -20,8 +19,7 @@
       <td>{{user.landmark}}</td>
       <td>{{user.rent}}</td>
       <td>{{user.description}}</td>
-      <td>{{user.upload}}</td>
-      <td><img src="../../assets/{{user.upload}}"></td>
+      <td><img src="{{user.upload}}" width="100%" alt="property"></td>
     </tr>
   </tbody>
   </table>
