--- a/property/src/app/dashqueries/dashqueries.component.css
+++ b/property/src/app/dashqueries/dashqueries.component.css
@@ -2,7 +2,6 @@
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 70px;
-  /* margin-top: -200px; */
   padding: 100px;
 }
 
@@ -20,6 +19,6 @@
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #04AA6D;
+  background-color: goldenrod;
   color: white;
 }
