--- a/property/src/app/footer/footer.component.html
+++ b/property/src/app/footer/footer.component.html
@@ -1,4 +1,3 @@
-<!-- <p>footer works!</p> -->
 
 <footer class="footer-distributed">
 
@@ -14,7 +13,6 @@
             |
             <a href="aboutus" class="aboutus">ABOUT US</a>
             |
-            <!-- <a href="#">ADMIN</a> -->
             <a href="adminlogin" class="adminlogin">ADMIN</a>
 
         </p>
@@ -24,16 +22,16 @@
   
     <div class="footer-center">
         <div>
-            <i class="fa fa-map-marker"></i>
+            <em class="fa fa-map-marker"></em>
             <p>CHENNAI</p>
         </div>
   
         <div>
-            <i class="fa fa-phone"></i>
+            <em class="fa fa-phone"></em>
             <p>+123-456-789</p>
         </div>
         <div>
-            <i class="fa fa-envelope"></i>
+            <em class="fa fa-envelope"></em>
             <p><a href="#">getprop@gmail.com</a></p>
         </div>
     </div>
@@ -43,11 +41,11 @@
             <strong>GET PROP</strong> <br> serving you is what we love to perform.
         </p>
         <div class="footer-icons">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-youtube"></i></a>
+            <a href="#"><em class="fa fa-facebook"></em></a>
+            <a href="#"><em class="fa fa-instagram"></em></a>
+            <a href="#"><em class="fa fa-linkedin"></em></a>
+            <a href="#"><em class="fa fa-twitter"></em></a>
+            <a href="#"><em class="fa fa-youtube"></em></a>
         </div>
     </div>
   </footer>
