--- a/property/src/app/header/header.component.html
+++ b/property/src/app/header/header.component.html
@@ -1,4 +1,3 @@
-<!-- <p>header works!</p> -->
  
     <header>
         <div class="header-inner">
@@ -13,19 +12,16 @@
             <a routerLink="lists" class="nav-link">HOME</a>
             <a routerLink="selectprop" class="nav-link">BUY PROP</a>
 
-            <!-- <a routerLink="service2" class="nav-link">GET HELP</a> -->
-            <!-- <a routerLlink="services" class="nav-link">SERVICES</a> -->
+            
             <a routerLink="postprop" class="nav-link" >POST PROP</a>
-            <!-- <a routerLink="signup" class="nav-signup" >SIGN UP</a> -->
             <a routerLink="aboutus" class="nav-link" >ABOUT</a>
 
             <a routerLink="signup" class="nav-signup" >REGISTER</a>
-            <a routerLink="admin" class="nav-signup">ADMIN</a>
+            <a routerLink="akila" class="nav-signup">ADMIN</a>
             
           </nav>
           
         </div>
       </header>
-      <!-- <router-outlet></router-outlet> -->
 
  
