--- a/property/src/app/land/land.component.html
+++ b/property/src/app/land/land.component.html
@@ -2,14 +2,13 @@
     <div class="grid">
       <div class="grid-item">
         <div class="card">
-          <img class="card-img" src="../../assets/land1.jpg" alt="Rome" />
+          <img class="card-img" src="../../assets/land1.jpg" alt="land" />
           <div class="card-content">
             <h6 class="card-header">T NAGAR</h6>
             <p class="card-text">
               A Decent 1BHK house with good interior designs and modular kitchen , 2 attached restrooms , beach view balcony and there are both 2 wheeler and 4wheeler parking facilities
             
             </p>
-            <!-- <button class="card-btn">GET CONTACT</button> -->
             <a href="land1" class="land1">GET CONTACT</a>
           </div>
         </div>
@@ -19,7 +18,7 @@
           <img
             class="card-img"
             src="../../assets/land2.jpg"
-            alt="Grand Canyon"
+            alt="land"
           />
           <div class="card-content">
             <h4 class="card-header">VELACHERRY</h4>
@@ -27,7 +26,6 @@
               A Decent 1BHK house with good interior designs and modular kitchen , 2 attached restrooms , beach view balcony and there are both 2 wheeler and 4wheeler parking facilities
 
             </p>
-            <!-- <button class="card-btn">GET CONTACT</button> -->
             <a href="land2" class="land2">GET CONTACT</a>
 
           </div>
@@ -35,13 +33,12 @@
       </div>
       <div class="grid-item">
         <div class="card">
-          <img class="card-img" src="../../assets/land3.jpeg" alt="Maldives" />
+          <img class="card-img" src="../../assets/land3.jpeg" alt="land" />
           <div class="card-content">
             <h4 class="card-header">AMBATTUR</h4>
             <p class="card-text">
               A Decent 1BHK house with good interior designs and modular kitchen , 2 attached restrooms , beach view balcony and there are both 2 wheeler and 4wheeler parking facilities
             </p>
-            <!-- <button class="card-btn">GET CONTACT</button> -->
             <a href="land3" class="land3">GET CONTACT</a>
 
           </div>
@@ -49,13 +46,12 @@
       </div>
       <div class="grid-item">
         <div class="card">
-          <img class="card-img" src="../../assets/land4.jpeg" alt="Maldives" />
+          <img class="card-img" src="../../assets/land4.jpeg" alt="land" />
           <div class="card-content">
             <h4 class="card-header">AVADI</h4>
             <p class="card-text">
               A Decent 1BHK house with good interior designs and modular kitchen , 2 attached restrooms , beach view balcony and there are both 2 wheeler and 4wheeler parking facilities
             </p>
-            <!-- <button class="card-btn">GET CONTACT</button> -->
             <a href="land4" class="land4">GET CONTACT</a>
 
           </div>
@@ -63,13 +59,12 @@
       </div>
       <div class="grid-item">
         <div class="card">
-          <img class="card-img" src="../../assets/land5.jpg" alt="Maldives" />
+          <img class="card-img" src="../../assets/land5.jpg" alt="land" />
           <div class="card-content">
             <h4 class="card-header">ARAKONNAM</h4>
             <p class="card-text">
               A Decent 1BHK house with good interior designs and modular kitchen , 2 attached restrooms , beach view balcony and there are both 2 wheeler and 4wheeler parking facilities
             </p>
-            <!-- <button class="card-btn">GET CONTACT</button> -->
             <a href="land5" class="land5">GET CONTACT</a>
 
           </div>
@@ -77,13 +72,12 @@
       </div>
       <div class="grid-item">
         <div class="card">
-          <img class="card-img" src="../../assets/land66.jpeg" alt="Maldives" />
+          <img class="card-img" src="../../assets/land66.jpeg" alt="land" />
           <div class="card-content">
             <h4 class="card-header">KAATPAADI</h4>
             <p class="card-text">
               A Decent 1BHK house with good interior designs and modular kitchen , 2 attached restrooms , beach view balcony and there are both 2 wheeler and 4wheeler parking facilities
             </p>
-            <!-- <button class="card-btn">GET CONTACT</button> -->
             <a href="land6" class="land6">GET CONTACT</a>
 
           </div>
