--- a/property/src/app/lists/lists.component.css
+++ b/property/src/app/lists/lists.component.css
@@ -3,9 +3,24 @@
     margin: 0;
     box-sizing: border-box;
   }
-  body{
+  /* body{
     height: 1000px;
     background-color:white;
+  } */
+  h2{
+padding-bottom: 300px;
+/* padding-left: 60%;  */
+margin-top: 70%;
+/* padding-right: 80%; */
+
+
+ }
+  h2 span{
+    color: goldenrod;
+    font-size: 40px;
+    text-align: center;
+    /* margin-left: 400px; */
+    
   }
   header{
     position: relative;
@@ -198,13 +213,23 @@ background-color:goldenrod;
 }
 
 
- video {
-  width: 100%;
-  height: 300px;
-  float: left;
-  padding-top: 50px;
-  /* padding-right: 80px; */
+ .video {
+  /* padding-left: 40%; */
+  display: flex;
+  margin-right: 40px;
+  
 }
+.video p{
+  margin-top: 180px;
+  font-size: 50px;
+  margin-left: 40px;
+  /* padding-right: 500px; */
+}
+.video p span{
+  margin-left: 200px;
+
+}
+
 
 /* services */
 
@@ -382,8 +407,13 @@ body {
 
 .radio-buttons {
   width: 100%;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   text-align: center;
+  padding-left: 15px;
+  padding-top:10px;
+  margin-top: -350px;
+  
+
 }
 
 .custom-radio input {
@@ -391,9 +421,9 @@ body {
 }
 
 .radio-btn {
-  margin: 10px;
-  width: 180px;
-  height: 200px;
+  /* margin: 1px; */
+  width: 200px;
+  height: 100px;
   border: 3px solid transparent;
   display: inline-block;
   border-radius: 10px;
@@ -401,6 +431,7 @@ body {
   text-align: center;
   box-shadow: 0 0 20px #c3c3c367;
   cursor: pointer;
+  
 }
 
 .radio-btn > i {
@@ -422,7 +453,7 @@ body {
   width: 80px;
   height: 80px;
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -574,3 +605,101 @@ body{
 }
 
 
+
+
+
+.container1
+{
+padding:30px;
+font-family:'Roboto';
+font-size:16px;
+font-weight:300;
+line-height:24px;
+margin-top: -150px;
+}
+h4{
+  font-size: 40px;
+  margin-top: 30px;
+}
+h4 span{
+  color: goldenrod;
+  font-size: 50px;
+}
+.container1 p
+{
+margin-bottom:15px;
+line-height: 30px;
+}
+.thumbanail
+{
+width:450px;
+position:relative;
+box-shadow:0 0 5px rgba(0,0,0,.4);
+background-color:#fff;
+overflow:hidden;
+border-radius:8px;
+margin-bottom:10px;
+}
+.thumbanail:before
+{
+content:'';
+position:absolute;
+top:0;
+left:0;
+width:100%;
+height:100%;
+border:8px solid #fff;
+z-index:2;
+overflow:hidden;
+box-sizing:border-box;
+}
+.thumbanail img
+{
+width:100%;
+height:auto;
+border-radius:8px;
+transform:scale(1) rotate(0deg);
+transition:all .5s linear;
+}
+.thumbanail:hover img
+{
+transform:scale(1.1) rotate(-5deg);
+}
+.thumbanail.right
+{
+float:right;
+margin-left:20px;
+}
+.thumbanail.left
+{
+float:left;
+margin-right:20px;
+}
+@media screen and (max-width:767px)
+{
+.thumbanail.right
+{
+float:none;
+margin-left:0px;
+}
+.thumbanail.left
+{
+float:none;
+margin-right:0px;
+}
+.thumbanail{
+width:100%;
+}
+}
+
+
+a:link, a:visited {
+  background-color: white;
+  color: black;
+  border: 2px solid goldenrod;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  }
+  
