--- a/property/src/app/login/login.component.css
+++ b/property/src/app/login/login.component.css
@@ -1,58 +1,90 @@
-
-.form-group {
-  width: 50%;
-  overflow: hidden;
-  font-size: 20px;
-  padding: 28px 0;
-  margin: 8px 0;
-  border-bottom: 1px solid goldenrod;
-  margin-left: 270px;
-  
-}
-.container-fluid{
-  margin-top: 110px;
-}
-input {
-  border: none;
-  outline: none;
-  background: none;
-  font-size: 18px;
-  width: 200px;
-  float: left;
-  margin: 0 10px;
-}
-
-.form-group label {
-  width: 26px;
-  float: left;
-  text-align: left;
-}
-.btn {
- 
-  display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 45px;
-    max-width: 200px;
-    margin-left: -30px;
-    width: 100%;
-    border: none;
-    outline: none;
-    color: #fff;
-    border-radius: 5px;
-    margin: 25px 350px;
-    background-color:goldenrod;
-    transition: all 0.3s linear;
-    cursor: pointer;
-}
-.text-success {
-  color:black;
-}
-.row{
-  display: flex;
-}
-.img img{
-  padding-top: 10px;
-  width: 500px;
-  height: 300px;
-}
+section {
+     /* background: url(../../assets/1018573.png); */
+     width: 100%;
+     margin-top: -20px;
+     padding: 90px;
+    }
+    .container {
+     /* background-color: #ddd; */
+     border-radius: 10px;
+     width: 500px;
+    }
+    
+    .text {
+     color: goldenrod;
+     font-size: 14px;
+     font-weight: 100;
+     line-height: 2px;
+     margin: 20px 0 30px;
+    }
+    
+    .form-group {
+     width: 60%;
+     overflow: hidden;
+     font-size: 20px;
+     padding: 28px 0;
+     margin: 8px 0;
+     border-bottom: 1px solid goldenrod;
+     margin-left: 50px;
+    }
+    input {
+     border: none;
+     outline: none;
+     background: none;
+     font-size: 18px;
+     width: 200px;
+     float: left;
+     margin: 0 10px;
+     color: goldenrod;
+    }
+    
+    .form-group em {
+     width: 26px;
+     text-align: center;
+     color: #222;
+     float: left;
+    }
+    
+    
+    .signup {
+     margin-left: 270px;
+     padding-top: 30px;
+    }
+    a {
+     color: goldenrod;
+     text-decoration: none;
+     font-size: 19px;
+    }
+    a:hover {
+     color: goldenrod;
+    }
+    
+    .account {
+     font-size: 18px;
+     text-align: center;
+     padding-right: 35%;
+    }
+    .btn {
+   
+      display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 45px;
+        max-width: 120px;
+        /* margin-left: -30px; */
+        width: 100%;
+        border: none;
+        outline: none;
+        color: #fff;
+        border-radius: 5px;
+        margin: 25px 45px;
+        background-color:goldenrod;
+        transition: all 0.3s linear;
+        cursor: pointer;
+    }
+    .btn:hover {
+      transform: scale(1.08);
+    }
+    
+    
+    
