--- a/property/src/app/services/services.component.css
+++ b/property/src/app/services/services.component.css
@@ -4,7 +4,10 @@
   margin: 0;
   padding: 0;
 }
-
+h3{
+  text-align: center;
+  font-size: 30px;
+}
 html {
   box-sizing: border-box;
   font-size: 20px;
