--- a/property/src/app/buytypeofprop/buytypeofprop.component.html
+++ b/property/src/app/buytypeofprop/buytypeofprop.component.html
@@ -7,7 +7,7 @@
        <div class="card">
        
        <div class="image">
-          <img src="../../assets/house1.jpg">
+          <img src="../../assets/house1.jpg" alt="land">
        </div>
        <div class="title">
        
@@ -22,7 +22,7 @@
        <div class="card">
        
        <div class="image">
-          <img src="../../assets/comm4.jpg">
+          <img src="../../assets/comm4.jpg" alt="land">
        </div>
        <div class="title">
        
@@ -37,7 +37,7 @@
        <div class="card">
        
        <div class="image">
-          <img src="../../assets/land1.jpg">
+          <img src="../../assets/land1.jpg" alt="land">
        </div>
        <div class="title">
   
