--- a/property/src/app/header/header.component.html
+++ b/property/src/app/header/header.component.html
@@ -5,9 +5,9 @@
           <div class="search-container">
             <form action="/action_page.php">
               <input type="search" placeholder="Enter Locality/Landmark" name="search"  [(ngModel)]="searchTerm" (keyup)="search($event)">
-              <button type="submit"><i class="fa fa-search"></i></button>
+              <button type="submit"><em class="fa fa-search"></em></button>
             </form></div>
-          <i id="bars" class="fas fa-bars bars"></i>
+          <em id="bars" class="fas fa-bars bars"></em>
           <nav class="nav-menu">
             <a routerLink="lists" class="nav-link">HOME</a>
             <a routerLink="selectprop" class="nav-link">BUY PROP</a>
