--- a/property/src/app/lists/lists.component.html
+++ b/property/src/app/lists/lists.component.html
@@ -4,7 +4,7 @@ href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3
 />
     
     <div class="example">
-      <img  class="background-image" src="../../assets/abc.jpg" height="500">
+      <img  class="background-image" src="../../assets/abc.jpg" height="500" alt="home">
       <div class="overlay">
         GET<span>PROP</span><br>ADORN <span> YOUR</span> HOME<span> TODAY</span>
       </div>
@@ -56,7 +56,7 @@ href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3
 <div class="video">
   <p>" A fully-integrated property management system that makes <br><span>life easier</span>"</p>
 
-  <iframe src="../../assets/Property Ad Video Template (Editable).mp4" width="900" height="500" autoplay></iframe>
+  <iframe src="../../assets/Property Ad Video Template (Editable).mp4" width="900" height="500" autoplay title="video"></iframe>
 </div>
 
   
