--- a/property/src/app/selltypeofprop/selltypeofprop.component.html
+++ b/property/src/app/selltypeofprop/selltypeofprop.component.html
@@ -7,7 +7,7 @@
        <div class="card">
        
        <div class="image">
-          <img src="../../assets/house1.jpg">
+          <img src="../../assets/house1.jpg" alt="home">
        </div>
        <div class="title">
         <h1>
@@ -23,7 +23,7 @@
        <div class="card">
        
        <div class="image">
-          <img src="../../assets/comm4.jpg">
+          <img src="../../assets/comm4.jpg" alt="home">
        </div>
        <div class="title">
         <h1>
@@ -39,7 +39,7 @@
        <div class="card">
        
        <div class="image">
-          <img src="../../assets/land1.jpg">
+          <img src="../../assets/land1.jpg" alt="home">
        </div>
        <div class="title">
         <h1>
