--- a/property/src/app/rentalapplication/rentalapplication.component.html
+++ b/property/src/app/rentalapplication/rentalapplication.component.html
@@ -72,7 +72,7 @@
         </form>
       </div>
       <div class="img">
-        <img src="../../assets/signupp.jpg">
+        <img src="../../assets/signupp.jpg" alt="home">
       </div>
     
     </div>
