--- a/property/src/app/land/land.component.css
+++ b/property/src/app/land/land.component.css
@@ -60,7 +60,7 @@ body {
 }
 
 .card-text {
-  font: size 10px;;
+  font-size: 10px;
   /* letter-spacing: 0.1rem; */
   /* line-height: 1.7; */
   color: #3d3d3d;
