--- a/property/src/app/dashboard/dashboard.component.css
+++ b/property/src/app/dashboard/dashboard.component.css
@@ -67,14 +67,14 @@ h2 {
   justify-content: center;
 }
 
-.side-menu li {
+.side-menu li a {
   font-size: 20px;
   padding: 10px 30px;
   color: #fff;
   display: flex;
   align-items: center;
 }
-.side-menu li:hover {
+.side-menu li a:hover {
   background:transparent;
   color: goldenrod;
   transform: scale(1.08);
@@ -109,11 +109,15 @@ a {
   text-align: center;
   margin-top: -60px;
 }
+.container h2{
+  color: #222;
+  font-size: 30px;
+}
 
 .card {
   background-color:#333;
-  margin-top: 4rem;
-  border-radius: 0 0 8px 8px;
+  margin-top: 1rem;
+  /* border-radius: 0 0 8px 8px; */
 }
 
 .hero__img {
