--- a/property/src/app/footer/footer.component.css
+++ b/property/src/app/footer/footer.component.css
@@ -49,12 +49,14 @@ footer {
   .footer-distributed .footer-links {
     color: #ffffff;
     margin: 20px 0 12px;
+    font-size: 16px;
   }
   
   .footer-distributed .footer-links a {
     display: inline-block;
     line-height: 1.8;
     text-decoration: none;
+    font-size: 16px;
     color: inherit;
   }
   
