--- a/property/src/app/dashpostprop/dashpostprop.component.css
+++ b/property/src/app/dashpostprop/dashpostprop.component.css
@@ -1,3 +1,8 @@
+table{
+  margin-left: 200px;
+  margin-top: 50px;
+}
+
 #post {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
