--- a/property/src/app/header/header.component.css
+++ b/property/src/app/header/header.component.css
@@ -59,12 +59,14 @@
     padding-left: 40px;
     color: #fff;
     text-decoration: none;
+    font-size: 16px;
     transition: color 0.6s ease;
   }
   .nav-signup{
     margin-left: 50px;
     padding: 0%;
     color:goldenrod;
+    font-size: 16px;
     text-decoration: none;
     transition: color 0.6s ease;
   }
