--- a/property/src/app/lists/lists.component.css
+++ b/property/src/app/lists/lists.component.css
@@ -5,12 +5,13 @@
   }
  
   h2{
-padding-bottom: 300px;
+padding-bottom: 400px;
 margin-top: 70%;
+padding-left: 40px;
 
 
  }
-  h2 span{
+  h2 .click{
     color: goldenrod;
     font-size: 40px;
     text-align: center;
@@ -336,7 +337,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin-top: -150px;
+  margin-top: -220px;
 
 }
 
@@ -350,11 +351,11 @@ body {
 
 .radio-buttons {
   width: 100%;
-  /* margin: 0 auto; */
   text-align: center;
-  padding-left: 15px;
+  /* padding-left: 15px; */
+  margin-right: 100px;
   padding-top:10px;
-  margin-top: -350px;
+  margin-top: -450px;
   
 
 }
@@ -365,15 +366,16 @@ body {
 
 .radio-btn {
   /* margin: 1px; */
-  width: 200px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   border: 3px solid transparent;
   display: inline-block;
   border-radius: 10px;
   position: relative;
   text-align: center;
-  box-shadow: 0 0 20px #c3c3c367;
+  box-shadow: 0 0 20px #222;
   cursor: pointer;
+  margin-left: 120px;
   
 }
 
