--- a/property/src/app/lists/lists.component.html
+++ b/property/src/app/lists/lists.component.html
@@ -11,9 +11,18 @@ href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3
     </div>
   
 
-    <div class="main-container">
+    <!-- <div class="main-container">
       <h2>BUY OR SELL YOUR PROP AT <span>ONE CLICK</span></h2>
       <div class="radio-buttons">
+        <label class="custom-radio">
+          <input type="radio" routerLink="/sell" name="radio" checked />
+          <span class="radio-btn"
+            ><em class="las la-check"></em>
+            <div class="hobbies-icon">
+              <em class="las la-home"></em>
+            </div>
+          </span>
+        </label>
         <label class="custom-radio">
           <input type="radio" routerLink="/buytypeofprop" name="radio" checked />
           <span class="radio-btn"
@@ -23,19 +32,58 @@ href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3
             </div>
           </span>
         </label>
-        
-       
       </div>
+    </div> -->
 
-      
+    <div class="main-container">
+      <h2>BUY OR SELL YOUR PROP AT <span class="click">ONE CLICK</span></h2>
+      <div class="radio-buttons">
+        <label class="custom-radio">
+          <input type="radio" routerLink="/buytypeofprop" name="radio"  />
+          <span class="radio-btn"
+            ><em class="las la-check"></em>
+            <div class="hobbies-icon">
+              <em class="las la-home"></em>
+              <h3>BUY</h3>
+            </div>
+          </span>
+        </label>
+        <label class="custom-radio">
+          <input type="radio" routerLink="/sell" name="radio" checked />
+          <span class="radio-btn"
+            ><em class="las la-check"></em>
+            <div class="hobbies-icon">
+              <em class="las la-building"></em>
+              <h3>SELL</h3>
+            </div>
+          </span>
+        </label>
+        <label class="custom-radio">
+          <input type="radio" routerLink="/contact" name="radio"  />
+          <span class="radio-btn"
+            ><em class="las la-check"></em>
+            <div class="hobbies-icon">
+              <em class="las la-comment-dots"></em>
+              <h3>QUERIES</h3>
+            </div>
+          </span>
+        </label>
+        <!-- <label class="custom-radio">
+          <input type="radio" name="radio" />
+          <span class="radio-btn"
+            ><em class="las la-check"></em>
+            <div class="hobbies-icon">
+              <em class="las la-ellipsis-h"></em>
+              <h3>GET STARTED</h3>
+            </div>
+          </span>
+        </label> -->
+      </div>
     </div>
 
-  
-   
 
 
-
-  <div class="container1">
+<div class="container1">
    
     <div class="thumbanail left">
        <img src="../../assets/cover.jpg" alt="" />
